# building-blocks

./: .gitattributes  .gitignore  404.html  LINK_VALIDATION_REPORT.md  README.md  data-for-ai-showcase.html  feedback.html  index.html  mkdocs.yml  sitemap.xml
ai-trust/real-time-guardrails/assets/sdk/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
ai-trust/real-time-guardrails/assets/sdk/docs/: rag-guardrails-flow.mmd
ai-trust/real-time-guardrails/assets/sdk/examples/: .env.thresholds.example  full_pipeline.py  library_custom_judge.py  library_quickstart.py  library_threshold_override.py  mcp_client_config.json  rest_client.py
ai-trust/real-time-guardrails/assets/sdk/src/real_time_guardrails/: __init__.py  audit.py  cli.py
ai-trust/real-time-guardrails/assets/sdk/src/real_time_guardrails/core/: config.py  custom_metrics.py  evaluator.py  exceptions.py  inputs.py  metrics.py  registry.py  results.py  thresholds.py
ai-trust/real-time-guardrails/assets/sdk/src/real_time_guardrails/mcp/: server.py
ai-trust/real-time-guardrails/assets/sdk/src/real_time_guardrails/rest/: routes.py  server.py
ai-trust/real-time-guardrails/assets/sdk/tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_custom_metrics.py  test_evaluator_integration.py  test_evaluator_unit.py  test_inputs.py  test_mcp_tools.py  test_registry.py  test_rest_routes.py  test_results.py  test_thresholds.py
css/: style.css
data/integration/data-streaming/assets/supply-chain-risk-control-tower/: .env.example  README.md  pyproject.toml
data/integration/data-streaming/assets/supply-chain-risk-control-tower/code/flink-sql/: 01_enriched_supply_view.sql  02_external_route_risk_view.sql  03_calculate_risk_scores.sql  04_generate_recommendations.sql  README.md
data/integration/data-streaming/assets/supply-chain-risk-control-tower/code/schemas/: component_master.json  control_tower_alerts.json  customer_orders.json  external_risk_events.json  inventory_levels.json  purchase_orders.json  shipments.json  supplier_profiles.json  supply_chain_recommendations.json  supply_chain_risk_scores.json
data/integration/data-streaming/assets/supply-chain-risk-control-tower/code/scrc/: kafka_utils.py  models.py  producer.py  register_schemas.py  risk_engine.py  risk_logic.py  sample_data.py  settings.py  slack_alerts.py
data/integration/data-streaming/assets/supply-chain-risk-control-tower/code/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
data/integration/data-streaming/assets/supply-chain-risk-control-tower/code/ui/: README.md  app.js  index.html  kafka_bridge.py  styles.css
data/integration/data-streaming/assets/supply-chain-risk-control-tower/docs/: demo_script.md  security_governance.md  workshop_guide.md
data/integration/data-streaming/assets/supply-chain-risk-control-tower/docs/agents/: procurement_escalation_prompt.md  risk_summary_prompt.md  supplier_email_prompt.md
data/integration/data-streaming/assets/supply-chain-risk-control-tower/docs/assets/: opensearch-index-template.json  sample_risk_event.json
data/integration/data-streaming/assets/supply-chain-risk-control-tower/docs/specs/: README.md  SDD-AUTHORING-CHECKLIST.md  SPEC-01-watsonx-ai-live.md  SPEC-02-opensearch-consumer.md  (+6 more)
data/integration/data-streaming/assets/supply-chain-risk-control-tower/scripts/: register_schemas.sh  run_dry_run.sh  run_producer.sh  run_risk_engine.sh  run_tests.sh  setup.sh
explore-BBs/mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
explore-BBs/mcp-server/client_configs/: bob.json  local_test.json
explore-BBs/mcp-server/src/building_blocks_mcp_remote/: github_client.py  registry.py  server.py
explore-BBs/mcp-server/src/building_blocks_mcp_remote/tools/: assets.py  bob_modes.py  details.py  discover.py  docs.py
(+1439 files in other folders)
