[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "building-blocks-mcp-remote"
version = "0.1.0"
description = "Remote MCP server for IBM Technology Building Blocks (Streamable HTTP, Code Engine)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
building-blocks-mcp-remote = "building_blocks_mcp_remote.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/building_blocks_mcp_remote"]
